--- a/devsearch-web-ui/package.json
+++ b/devsearch-web-ui/package.json
@@ -13,6 +13,7 @@
     "keycloak-js": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable-tags": "^1.0.6",
     "react-loader-spinner": "^5.1.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
