--- a/devsearch-web-ui/package.json
+++ b/devsearch-web-ui/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "keycloak-js": "^17.0.0",
+    "npm": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable-tags": "^1.0.6",
